website/src/css/customTheme.css
/* ... */
.oss-promo {
  display: flex;
  padding: 50px 0;
  flex-flow: row-reverse;
  color: black;
  background: #fff8f6;
}

.oss-promo-text {
  width: 50%;
  display: flex;
  justify-content: center;
  flex-direction: column;
  background: #121010;
  color: white;
}

.oss-promo-infograph {
  background: #0a0a0a;
  width: 50%;
  height: 100%;
}

.oss-promo-cta {
  background: #080808;
  display: flex;
  width: fit-content;
  font-size: 0.95rem;
  border-style: solid;
  border-radius: 32px;
  border-width: 1.75px;
  padding: 5px 12px;
  transition: background 0.5s;
}

.oss-promo a {
  color: white;
}

.oss-promo-cta:hover {
  background: #9b9b9b;
  color: #080808;
  border-style: solid;
}

.oss-promo-cta > a:hover {
  color: #080808;
}

/* Events and newsletter */
.event-card-container {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
}

.event-card {
  border-style: solid;
  border-color: #fff;
  box-shadow: 0 4px 23px rgb(0 0 0 / 10%));
  font-size: 0.95rem;
  font-family: MaisonNeue-Light, sans-serif;
  font-weight: 700;
  padding: 20px;
  width: 230px;
  height: 200px;
  margin: 0 20px;
  border-radius: 10px;
  position: relative;
}

.event-card-title {
  position: absolute;
  top: 25px;
}

.event-card-time {
  position: absolute;
  top: 55%;
  color: #6a6a6a;
}

.event-card-read {
  position: absolute;
  bottom: 25px;
}

.newsletter {
  display: flex;
  font-weight: 700;
  font-family: MaisonNeue-Light, sans-serif;
  font-size: 0.95rem;
  color: #615d5d;
  letter-spacing: 0.2px;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  margin: 25px 0;
}

.news-button {
  border: none;
  padding: 5px 30px;
  border-style: solid;
  border-radius: 20px;
  background: #030c16;
  color: white;
  margin: 0;
  text-decoration: none;
  transition: all 0.3s;
}

.news-button:hover {
  background: #9b9b9b;
  color: white;
  text-decoration: none;
}

.endcta-text {
  text-align: center;
  font-size: 3.5rem;
  font-family: MaisonNeue-ExtraBold, sans-serif;
}

.endcta-btns {
  display: flex;
  justify-content: center;
  padding-bottom: 2rem;
}

.rocket {
  width: 6vw;
  height: auto;
  transform: rotate(45deg);
}

/* footer */
.footer__title {
  font-family: MaisonNeue-Medium, sans-serif !important;
}

.footer__links .footer__title {
  font-weight: 700;
  font-size: 1.1rem;
}

.footer__links .footer__item a {
  opacity: 0.94;
}

.footer__links a:hover {
  opacity: 1;
  text-decoration: none;
}

.footer__bottom {
  margin-top: 36px;
}

.footer__bottom a[href^="https://www.apache.org/"] {
  opacity: 1;
}

.footer__bottom a[href^="https://www.apache.org/"]:hover {
  transform: scale(0.5);
}

.footer__bottom a[href^="https://www.apache.org/"] img {
  margin-top: 0;
  background: white;
  padding: 8px 20px 6px 19px;
  border-radius: 24px;
}

.footer__copyright {
  font-size: 12px;
  max-width: 680px;
  margin: 0 auto;
  opacity: 0.88;
}

/* help page */
.help-page .cards {
  margin-top: 38px;
  margin-bottom: 56px;
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-gap: 36px;
}

.help-page .card {
  padding: 24px 28px 18px;
  border: 1px solid #eee;
  box-shadow: 0 1px 2px 0 rgb(0 0 0 / 3%);
}

.help-page .card .header {
  padding: 0;
}

.help-page .card h2 {
  display: flex;
  align-items: center;
}

.help-page .card h2 img {
  padding-bottom: 2px;
  height: 28px;
  margin-right: 14px;
}

.help-page #documents-icon {
  margin-right: 10px;
  margin-left: -6px;
}

.help-page .card p {
  color: var(--color-help-subtitle);
}

.help-page .card .buttons {
  margin-top: 18px;
  display: flex;
}

.help-page .card .buttons svg {
  height: 12px;
  margin-left: 4px;
  transition: transform 0.3s;
}

.help-page .card .buttons a {
  font-size: 18px;
  font-weight: 600;
  transition: all 0.3s;
  margin-right: 32px;
}

.help-page .card .buttons a:hover {
  text-decoration: none;
}

.help-page .card .buttons a:hover svg {
  transform: translateX(2px);
}

.team-githubLogo {
  height: 24px;
}

.downloads-subtitle {
  color: var(--color-downloads-subtitle);
}

.downloads-leftsidelinks {
  color: var(--color-downloads-leftsidelinks);
}

.downloads-leftsidelink:hover {
  color: var(--color-downloads-leftsidelink-hover);
}

.downloads-versioninfo {
  color: var(--color-downloads-rightside-versioninfo);
}

.downloads-versioninfo-span {
  color: var(--color-downloads-rightside-versioninfo-span);
}

.downloads-dropdown {
  background-color: var(--color-downloads-dropdown);
}

.download-dropdown-item:hover {
  background-color: var(--color-downloads-dropdown-items);
}

.team-repocard {
  color: var(--color-team-repocard);
}

.team-repocard:hover {
  color: var(--color-team-repocard-hover);
}

.docs-subtitle {
  color: var(--color-docs-subtitle);
}

.docs-versioninfo {
  color: var(--color-docs-versioninfo);
}

.pic-wrapper {
  width: 350px;
  position: fixed;
  display: flex;
  right: 0;
  bottom: 0;
  z-index: 999;
  outline: 0;
  overflow: auto;
  border: 0;
  box-shadow: 0 0 20px -12px #626365;
}

/* stylelint-disable-next-line no-descending-specificity */
.pic-wrapper a {
  display: flex;
}

.pic-wrapper-close {
  position: absolute;
  z-index: 1000;
  top: 10px;
  right: 10px;
  padding: 5px;
  font-weight: 900;
  color: rgb(135 151 172);
  font-size: 16px;
  outline: none;
  border-radius: 100px;
  border: 1px solid transparent;
}

.pic-wrapper-close:hover {
  cursor: pointer;
}

/* stylelint-disable-next-line no-descending-specificity */
.pic-wrapper-close svg {
  width: 10px;
  height: 10px;
  display: inherit;
}

@media only screen and (max-width: 440px) {
  .pic-wrapper {
    width: 70%;
  }
}

/* plugin hub section */
.plugin-logo {
  margin-top: 10px;
  max-width: 250px;
  max-height: 180px;
  transform: scale(1);
  transition: transform 0.5s ease;
}

.plugin-logo.default {
  opacity: 0.2;
}

.overflow {
  overflow: hidden;
}

.plugin-logo:hover {
  transform: scale(1.2);
}
/* ... */

